<resources>
    <string name="app_name" translatable="false">EMS Admin Lite</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="local" translatable="false">Local</string>
    <string name="select_voter_position" translatable="false">Select voter position</string>
    <string name="non_local" translatable="false">Non Local</string>
    <string name="sr_citizen_unhealthy" translatable="false">Sr. Citizen/Unhealthy</string>
    <string name="postal" translatable="false">Postal</string>
    <string name="select_religion" translatable="false">Select Religion</string>
    <string name="hindu" translatable="false">Hindu</string>
    <string name="muslim" translatable="false">Muslim</string>
    <string name="christian" translatable="false">Christian</string>
    <string name="other" translatable="false">Other</string>
    <string name="no_internet_connection">No internet connection, please try again</string>
    <string name="activate_users">Activate Users</string>
    <string name="error_message_no_network">You are not currently connected to the internet.\n Please try again when you get online.</string>
    <string name="retry">Retry</string>
    <string name="no_result_found">No result found</string>
    <string name="no_user_found">No User Found</string>
    <string name="users">Users</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="are_you_sure_want_to_logout">Are you sure you \nwant to logout?</string>
    <string name="select_ward">Select Ward</string>
    <string name="activate_user">Activate User</string>
    <string name="pls_select_ward_first">Please select ward first</string>
    <string name="all">All</string>
    <string name="select_booth">Select Booth</string>
    <string name="user_detail">User Detail</string>
    <string name="no_booth_found">No Booth Found</string>
    <string name="no_ward_found">No Ward Found</string>
    <string name="pls_select_ward">Please select ward</string>
    <string name="pls_select_booth">Please select booth</string>
    <string name="user_updated_successfully">User Updated Successfully</string>
    <string name="changes_applied_successfully">Change Applied Successfully</string>
    <string name="search_voter">Search Voter</string>
    <string name="please_wait">Please wait…</string>
    <string name="family">Family</string>
    <string name="voter_detail">Voter Detail</string>
    <string name="pls_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="list_by_family">Family wise List</string>
    <string name="list_by_alphabet">Alphabetical List</string>
    <string name="list_by_voter_no">Voter No. List</string>
    <string name="list_by_surname">Surname wise List</string>
    <string name="list_by_address">Address wise List</string>
    <string name="list_by_mobile_no">Mobile no. wise List</string>
    <string name="list_by_cast">Caste wise List</string>
    <string name="list_by_status">Voter Status wise List</string>
    <string name="list_by_age">Age wise List</string>
    <string name="list_by_profession">Profession wise List</string>
    <string name="list_by_out_of_villege">OutStation Voter List</string>
    <string name="list_by_duplication">Duplication wise List</string>
    <string name="loading">Loading…</string>
    <string name="search_surname">Enter Surname</string>
    <string name="report">Report</string>
    <string name="import_data">Import Data</string>
    <string name="sync_data">Sync Data</string>
    <string name="update_booth">Update Booth</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="marathi">मराठी</string>
    <string name="kannada">Kannada</string>
    <string name="tamil">Tamil</string>
    <string name="telugu">Telugu</string>
    <string name="search_all">Search All</string>
    <string name="total">Total</string>
    <string name="ward_no">AC. No.</string>
    <string name="voter_no">Voter No.</string>
    <string name="voter_name">Voter Name</string>
    <string name="age">Age</string>
    <string name="following_change_apply_to_all_family_member">Below Changes are applied to all family members</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="update">Update</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="start">Start</string>
    <string name="total_voter">Total Voters</string>
    <string name="these_changes_apply_to_all_voters">These changes are applied to all voters</string>
    <string name="enter_your_mobile_no">Enter your mobile no</string>
    <string name="your_code">Your code</string>
    <string name="enter_unlock_code">Enter unlock code</string>
    <string name="search">Search</string>
    <string name="id_colon">ID :</string>
    <string name="house_number">House No.</string>
    <string name="epic_no">EPIC NO</string>
    <string name="address">Address</string>
    <string name="booth">Booth</string>
    <string name="add_number">Add number</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="outstation_address">Outstation Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="call">Call</string>
    <string name="print">Print</string>
    <string name="cancel">Cancel</string>
    <string name="polling_station">Polling Station</string>
    <string name="voting_date">Voting Date</string>
    <string name="voting_time">Voting Time</string>
    <string name="please_enter_voting_date">Please enter voting date</string>
    <string name="please_enter_voting_time">Please enter voting time</string>
    <string name="setting_save_successfully">Setting saved successfully.</string>
    <string name="permission_denied">Permission  denied</string>
    <string name="connecting">Connecting…</string>
    <string name="done">Done</string>
    <string name="pls_try_again">Please try again!!!</string>
    <string name="write_permission_not_granted">Write settings permission is not granted!</string>
    <string name="pls_select_image_to_print_on_header">This image will print on header</string>
    <string name="select_image_from_gallery">Select Image From Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="select_photo">Select Photo</string>
    <string name="camera_permission">Camera permission needed, Please allow in app Settings for additional functionality.</string>
    <string name="send_sms">SMS</string>
    <string name="footer_message">Footer Message</string>
    <string name="please_enter_footer_message">Please enter footer message</string>
    <string name="no_updated_records">No updated records</string>
    <string name="bt_not_supported">Device does not support Bluetooth</string>
    <string name="booth_committee">Booth Committee</string>
    <string name="admin">Admin</string>
    <string name="member">Member</string>
    <string name="none">None</string>
    <string name="ward_name">Ward Name</string>
    <string name="designation">Designation</string>
    <string name="imp_voter">IMP Voter</string>
    <string name="voter_added_successfully">Voter added successfully</string>
    <string name="voter_removed_successfully">Voter removed successfully</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="custom">Custom</string>
    <string name="pls_enter_from_booth">Please enter from booth</string>
    <string name="pls_enter_to_booth">Please enter to booth</string>
    <string name="from_booth_must_be_less_than_to_booth">From Booth must be less than or equal to To Booth</string>
    <string name="full_name">Full Name</string>
    <string name="voter_id">Voter ID</string>
    <string name="booth_no">Booth No</string>
    <string name="both">Both</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="reset">Reset</string>
    <string name="pls_enter_to_age">Please enter To Age</string>
    <string name="pls_enter_from_age">Please enter From Age</string>
    <string name="from_age_must_be_less_than_to_age">From Age must be less than or equal to To Age</string>
    <string name="wild_search">Wild Search</string>
    <string name="select_surname">Select Surname</string>
    <string name="cast">Cast</string>
    <string name="profession">Profession</string>
    <string name="gender">Gender</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="outstation">Outstation</string>
    <string name="sort_by">Sort By</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="election_day">Election Day</string>
    <string name="voted">Voted</string>
    <string name="non_voted">Non Voted</string>
    <string name="count_dash">Count -</string>
    <string name="password">Password</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="pls_enter_correct_password">Please enter correct password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="message_type">Message Type</string>
    <string name="general">General</string>
    <string name="voting">Voting</string>
    <string name="message_type_saved_successfully">Message type saved successfully</string>
    <string name="mobile_caste_count">Mobile/Caste Count</string>
    <string name="percent_completed">% completed</string>
    <string name="total_mobile_num_count_colon">Total Mobile Num Count :</string>
    <string name="total_caste_count_colon">Total Caste Count :</string>
    <string name="select_assembly">Select Assembly</string>
    <string name="select_division">Select Division</string>
    <string name="select_village">Select Village</string>
    <string name="unlock_code">Unlock Code</string>
    <string name="select_division_mandal">Select Division/Mandal</string>
    <string name="select_village_colony">Select Village/Colony</string>
    <string name="single">Single</string>
    <string name="from_to">From - To</string>
    <string name="booth_no_comma_seperated">Booth No (comma separated)</string>
    <string name="pls_select_assembly">Please select assembly</string>
    <string name="pls_select_division">Please select division</string>
    <string name="pls_select_village">Please select village</string>
    <string name="pls_enter_booth_no">Please enter booth no</string>
    <string name="division">Division</string>
    <string name="village">Village</string>
    <string name="cast_not_applied">Caste Not Applied</string>
    <string name="cast_applied">Caste Applied</string>
    <string name="with_mobile">With Mobile</string>
    <string name="without_mobile">Without Mobile</string>
    <string name="caste_survey">Caste Survey</string>
    <string name="card_no">Card No</string>
    <string name="house_no">House No</string>
    <string name="search_by">Search By</string>
    <string name="imported_data_successfully">Data imported successfully</string>
    <string name="sync_data_msg">Data sync successfully.</string>
    <string name="call_permission">Call Permission denied</string>
    <string name="booth_name">Booth Name</string>
    <string name="count">Count</string>
    <string name="influencer">Influencer</string>
    <string name="serial_no">Serial No</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="image_message_type">Image Message Type</string>
    <string name="without_image">Without Image</string>
    <string name="with_image">With Image</string>
    <string name="filter">Filter</string>
    <string name="refresh_voter_slip_image">Refresh voter slip image &amp; Setting</string>
    <string name="apply">Apply</string>
    <string name="set_default_printer">Set Printer</string>
</resources>